syntax = "proto3";
package proto.fs;

option go_package = "proto/fs/inode";

enum InodeType {
  UNSPECIFIED = 0;
  FILE = 1;
  DIRECTORY = 2;
}

// DirEntry is a versioned, directory entry which points to a single version of an inode
message DirEntry {
  int64 ino = 1;
  InodeType type = 2;
  int32 version = 3;
}

message FileInode {
  int64 ino = 1;
  int32 vCounter = 2;
  map<int32, string> versionMap = 3;
}

message DirInode {
  int64 ino = 1;
  int32 vCounter = 2;
  map<string, DirEntry> entries = 3;
}
